update contact page to have email instead of form

--- a/contact/index.html
+++ b/contact/index.html
@@ -325,143 +325,8 @@ document.addEventListener&&document.addEventListener("DOMContentLoaded",w,l);})(
   <section id="page" role="main">
           <header class="page-title"><h1>Contact</h1></header>
       <div class="page-description"></div>
-        <div class="sqs-layout sqs-grid-12 columns-12" data-type="page" data-updated-on="1359399688779" id="page-50eb5d16e4b0a5b2685d29d0"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block" data-block-json="&#123;&quot;wysiwyg&quot;:&#123;&quot;engine&quot;:&quot;code&quot;,&quot;mode&quot;:&quot;htmlmixed&quot;,&quot;isSource&quot;:false,&quot;source&quot;:&quot;&quot;&#125;,&quot;html&quot;:&quot;&lt;p&gt;Questions about the rules? Wanting information about sponsoring?&lt;br&gt;Just fill out the form below and we'll answer you as soon as possible.&lt;/p&gt;&lt;p&gt;&lt;/p&gt;&lt;p&gt;&lt;/p&gt;&quot;,&quot;engine&quot;:&quot;visual&quot;&#125;" data-block-type="2" id="block-8ec843f17fbc08f5ab87"><div class="sqs-block-content"><p>Questions about the rules? Wanting information about sponsoring?<br>Just fill out the form below and we'll answer you as soon as possible.</p><p></p><p></p></div></div></div></div><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block form-block" data-block-json="&#123;&quot;formId&quot;:&quot;50eb5d52e4b0a5b2685d2a5c&quot;,&quot;formName&quot;:&quot;New Form&quot;,&quot;googleDocsConnect&quot;:&#123;&quot;connected&quot;:false,&quot;socialConfig&quot;:null,&quot;username&quot;:null,&quot;serviceProviderId&quot;:6,&quot;spreadsheetName&quot;:&quot;&quot;&#125;,&quot;mailchimpConnect&quot;:&#123;&quot;connected&quot;:false,&quot;socialConfig&quot;:null,&quot;username&quot;:null,&quot;serviceProviderId&quot;:13&#125;,&quot;emailConnect&quot;:&#123;&quot;connected&quot;:true,&quot;username&quot;:&quot;tartanhacks@tartanhacks.com&quot;,&quot;email&quot;:&quot;tartanhacks@tartanhacks.com&quot;&#125;,&quot;submitButtonText&quot;:&quot;Send&quot;,&quot;submissionMessage&quot;:&#123;&quot;source&quot;:&quot;&lt;p &gt;Thank you! We'll be in touch as soon as possible.&lt;/p&gt;&quot;,&quot;engine&quot;:&quot;wysiwyg&quot;,&quot;html&quot;:&quot;&lt;p&gt;Thank you! We'll be in touch as soon as possible.&lt;/p&gt;&quot;&#125;&#125;" data-block-type="9" id="block-d7b5ca105306ea05f298"><div class="sqs-block-content"><div class="form-wrapper">
+        <div class="sqs-layout sqs-grid-12 columns-12" data-type="page" data-updated-on="1359399688779" id="page-50eb5d16e4b0a5b2685d29d0"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block" data-block-json="&#123;&quot;wysiwyg&quot;:&#123;&quot;engine&quot;:&quot;code&quot;,&quot;mode&quot;:&quot;htmlmixed&quot;,&quot;isSource&quot;:false,&quot;source&quot;:&quot;&quot;&#125;,&quot;html&quot;:&quot;&lt;p&gt;Questions about the rules? Wanting information about sponsoring?&lt;br&gt;Just fill out the form below and we'll answer you as soon as possible.&lt;/p&gt;&lt;p&gt;&lt;/p&gt;&lt;p&gt;&lt;/p&gt;&quot;,&quot;engine&quot;:&quot;visual&quot;&#125;" data-block-type="2" id="block-8ec843f17fbc08f5ab87"><div class="sqs-block-content"><p>Questions about the rules? Wanting information about sponsoring?<br>Email <a href="mailto:tartanhacks@tartanhacks.com">tartanhacks@tartanhacks.com</a> and we'll answer you as soon as possible.</p><p></p><p></p></div></div></div></div><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block form-block" data-block-json="&#123;&quot;formId&quot;:&quot;50eb5d52e4b0a5b2685d2a5c&quot;,&quot;formName&quot;:&quot;New Form&quot;,&quot;googleDocsConnect&quot;:&#123;&quot;connected&quot;:false,&quot;socialConfig&quot;:null,&quot;username&quot;:null,&quot;serviceProviderId&quot;:6,&quot;spreadsheetName&quot;:&quot;&quot;&#125;,&quot;mailchimpConnect&quot;:&#123;&quot;connected&quot;:false,&quot;socialConfig&quot;:null,&quot;username&quot;:null,&quot;serviceProviderId&quot;:13&#125;,&quot;emailConnect&quot;:&#123;&quot;connected&quot;:true,&quot;username&quot;:&quot;tartanhacks@tartanhacks.com&quot;,&quot;email&quot;:&quot;tartanhacks@tartanhacks.com&quot;&#125;,&quot;submitButtonText&quot;:&quot;Send&quot;,&quot;submissionMessage&quot;:&#123;&quot;source&quot;:&quot;&lt;p &gt;Thank you! We'll be in touch as soon as possible.&lt;/p&gt;&quot;,&quot;engine&quot;:&quot;wysiwyg&quot;,&quot;html&quot;:&quot;&lt;p&gt;Thank you! We'll be in touch as soon as possible.&lt;/p&gt;&quot;&#125;&#125;" data-block-type="9" id="block-d7b5ca105306ea05f298"><div class="sqs-block-content"><div class="form-wrapper">
 
-<form action="https://tartanhacks.squarespace.com" method="POST" autocomplete="on" onsubmit="return (function(form) { Y.use
-('squarespace-form-submit',
-function (Y) { (new Y.Squarespace.FormSubmit(form, false)).submit('50eb5d52e4b0a5b2685d2a5c') }); return false;})(this)">
-
-  <div class="field-list clear">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <fieldset id="name1" class="form-item fields name">
-      <div class="title">Name <span class="required">*</span></div>
-      <legend>Name</legend>
-              <div class="field first-name">
-          <label class="caption"><input class="field-element field-control" name="fname"
-          x-autocompletetype="given-name" type="text"
-          spellcheck="false"
-          maxlength="30" />
-          First Name</label>
-        </div>
-        <div class="field last-name">
-          <label class="caption"><input class="field-element field-control" name="lname"
-          x-autocompletetype="surname" type="text"
-          spellcheck="false" maxlength"30" />
-          Last Name</label>
-        </div>
-      </fieldset>
-
-
-
-
-
-
-    </fieldset>
-
-
-
-
-
-            <div id="email2" class="form-item field email">
-        <label class="title" for="email2-field">Email Address <span class="required">*</span></label>
-                <input class="field-element" name="email" x-autocompletetype="email" type="text" spellcheck="false" id="email2-field"        placeholder="carnegie@andrew.cmu.edu" />
-      </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </fieldset>
-
-
-
-            <div id="text3" class="form-item field text">
-        <label class="title" for="text3-field">Subject <span class="required">*</span></label>
-                <input class="field-element text" type="text" id="text3-field" placeholder="Rules, sponsorship, etc" />
-      </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </fieldset>
-
-
-
-
-            <div id="textarea4" class="form-item field textarea">
-        <label class="title" for="textarea4-field">Message <span class="required">*</span></label>
-                <textarea class="field-element " id="textarea4-field" ></textarea>
-      </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </fieldset>
-
-
-  </div>
-
-
-<input class="button" type="submit" value="Send"/>
-<div class="hidden form-submission-text"><p>Thank you! We'll be in touch as soon as possible.</p></div>
-
-</form>
 </div>
 </div></div></div></div></div>
   </section>
